sjengida/g1/l_king_mobility
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/l_king_mobility/src/leval.c:559:6: error: use of undeclared identifier 'king_o_0'
v1 = king_o_0; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/l_king_mobility/src/leval.c:567:15: error: use of undeclared identifier 'knight_o_1_0'
while ( v1 != knight_o_1_0 ); 
              ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/l_king_mobility/src/obj/leval.o] Error 1
